添加备课夹

--- a/src/coms/layout/header/header.html
+++ b/src/coms/layout/header/header.html
@@ -1,7 +1,9 @@
-﻿<div id="header">
+﻿<!--一级页面header-->
+<div id="header">
 	<div class="header-top container">
 		<img class="logo" src="assets/img/logo.png" />
 		<ul class="message">
+			<li><a href="#"><i class="icon-user"></i> &nbsp;XXX,欢迎您</a></li>
 			<li><a href="#">消息</a></li>
 			<li><a href="#">帮助中心</a></li>
 			<li><a href="#">退出</a></li>
@@ -23,7 +25,7 @@
 				<li><a href="#">学生学习空间</a></li>
 				<li><a href="#">资源定制</a></li>
 				<li><a href="#"><img src="assets/img/profile.png"/>个人中心</a></li>
-				<li class="shopping-cart"><a href="#"><img src="assets/img/shopcart.png"/>备课夹</a></li>
+				<li class="shopping-cart"><a ui-sref="prepare"><img src="assets/img/shopcart.png"/>备课夹</a></li>
 			</ul>
 		</div>
 	</div>
