--- a/src/less/header.less
+++ b/src/less/header.less
@@ -1,6 +1,5 @@
 // header样式
 #header{
-    height: 400px;
 }
 #header .header-top{
    height: 70px;
@@ -71,6 +70,10 @@
     background: url(assets/img/nav_active.png) no-repeat; 
 }
 
+.head-title{
+    font-size: 40px;
+    color: #12879A;
+}
 
 
 
