--- a/src/less/header.less
+++ b/src/less/header.less
@@ -70,9 +70,20 @@
     background: url(assets/img/nav_active.png) no-repeat; 
 }
 
-.head-title{
+.second-banner{
+    position: relative;
+    height: 140px;
+}
+.second-banner img{
+    position: absolute;
+    left:15px;
+}
+.second-banner .head-title{
+    position: absolute;
     font-size: 40px;
     color: #12879A;
+    bottom: 15px;
+    left: 200px;
 }
 
 
