--- a/src/less/frontend.less
+++ b/src/less/frontend.less
@@ -12,6 +12,8 @@
 // 头尾样式
 @import "header.less";
 @import "footer.less";
+/*资源选择公用样式*/
+@import "res.less";
 /*系统资源页样式*/
 @import "systemres.less";
 /*左侧目录样式*/
