--- a/src/coms/layout/views/res/res-header.html
+++ b/src/coms/layout/views/res/res-header.html
@@ -5,14 +5,14 @@
 	<div class="select-nav-item">
 		<div class="menu-drop">
 			<div class="trigger">
-				<span class="select-current" href="">{{Select.currentGrade}}</span>
+				<span class="select-current" href="">{{VM.currentGrade}}</span>
 				<i class="icon-angle-down"></i>
 				<i class="icon-angle-up"></i>
 			</div>
 			
 			<div class="menu-drop-main">
 				<ul class="menu-drop-list">
-					<li ng-repeat="grade in Select.grade track by $index" ng-class="Select.currentGradeSeclet[$index]?'selected':''" ng-click="Select.selectGrade($index)"><span>{{ grade }}</span></li>
+					<li ng-repeat="grade in VM.grade track by $index" ng-class="VM.currentGradeSeclet[$index]?'selected':''" ng-click="VM.selectGrade($index)"><span>{{ grade }}</span></li>
 				</ul>
 			</div>
 		</div>
@@ -21,32 +21,32 @@
 	<div class="select-nav-item">
 		<div class="menu-drop">
 			<div class="trigger">
-				<span class="select-current">{{Select.currentSubject}}</span>
+				<span class="select-current">{{VM.currentSubject}}</span>
 				<i class="icon-angle-down"></i>
 				<i class="icon-angle-up"></i>
 			</div>
 			
 			<div class="menu-drop-main">
 				<ul class="menu-drop-list">
-					<li ng-repeat="subject in Select.subject track by $index" ng-class="Select.currentSubjectSeclet[$index]?'selected':''" ng-click="Select.selectSubject($index)"><span>{{ subject }}</span></li>
+					<li ng-repeat="subject in VM.subject track by $index" ng-class="VM.currentSubjectSeclet[$index]?'selected':''" ng-click="VM.selectSubject($index)"><span>{{ subject }}</span></li>
 				</ul>
 			</div>
 		</div>
 	</div>
-	<div class="seperate-right" ng-show="Select.currentVersionShow || Select.currentVersionTmpShow"><i class="icon-angle-right"></i></div>
-	<div class="select-nav-item"  ng-show="Select.currentVersionShow || Select.currentVersionTmpShow">
+	<div class="seperate-right" ng-show="VM.currentVersionShow || VM.currentVersionTmpShow"><i class="icon-angle-right"></i></div>
+	<div class="select-nav-item"  ng-show="VM.currentVersionShow || VM.currentVersionTmpShow">
 		<div class="menu-drop">
 			<div class="trigger" ng-click="closeCurrentVersion()">
-				<span class="select-current" href="">{{Select.currentVersion}}</span>
+				<span class="select-current" href="">{{VM.currentVersion}}</span>
 				<i class="icon-remove"></i>
 			</div>
 		</div>
 	</div>
-	<div class="seperate-right" ng-show="Select.currentMaterialShow"><i class="icon-angle-right"></i></div>
-	<div class="select-nav-item"  ng-show="Select.currentMaterialShow">
+	<div class="seperate-right" ng-show="VM.currentMaterialShow"><i class="icon-angle-right"></i></div>
+	<div class="select-nav-item"  ng-show="VM.currentMaterialShow">
 		<div class="menu-drop">
 			<div class="trigger" ng-click="closeCurrentMaterial()">
-				<span class="select-current" href="">{{Select.currentMaterial}}</span>
+				<span class="select-current" href="">{{VM.currentMaterial}}</span>
 				<i class="icon-remove"></i>
 			</div>
 		</div>
@@ -65,31 +65,31 @@
 
 <!--筛选主内容 -->
 <div class="res-navbody">
-	<div class="res-body-content res-grade" ng-hide="Select.currentHeader">
+	<div class="res-body-content res-grade" ng-hide="VM.currentHeader">
 		<span class="res-content-left">学段:</span>
-		<span class="select-item res-grade-content" ng-repeat="grade in Select.grade track by $index" ng-class="Select.currentGradeSeclet[$index]?'selected':''" ng-click="Select.selectGrade($index)">{{ grade }}</span>
+		<span class="select-item res-grade-content" ng-repeat="grade in VM.grade track by $index" ng-class="VM.currentGradeSeclet[$index]?'selected':''" ng-click="VM.selectGrade($index)">{{ grade }}</span>
 	</div>
-	<div class="res-body-content res-subject" ng-hide="Select.currentHeader">
+	<div class="res-body-content res-subject" ng-hide="VM.currentHeader">
 		<div class="res-content-left">学科:</div>
 		<div class="res-subject-wrapper"> 
-			<span class="select-item res-subject-content" ng-repeat="subject in Select.subject track by $index" ng-class="Select.currentSubjectSeclet[$index]?'selected':''" ng-click="Select.selectSubject($index)">{{ subject }}</span>
+			<span class="select-item res-subject-content" ng-repeat="subject in VM.subject track by $index" ng-class="VM.currentSubjectSeclet[$index]?'selected':''" ng-click="VM.selectSubject($index)">{{ subject }}</span>
 		</div>
 		<!--<span class="res-more">
 		   	<a>更多<i class="icon-angle-down"></i></a>
 		</span>-->
 	</div>
 	<div class="clearfix"></div>
-	<div class="res-body-content res-material-version" ng-hide="Select.currentVersionShow">
+	<div class="res-body-content res-material-version" ng-hide="VM.currentVersionShow">
 		<div class="res-content-left">版本:</div>
-		<span ng-repeat="v in Select.version track by $index" class="select-item res-material-content" ng-click="Select.selectVersion($index)">{{ v }}</span>
+		<span ng-repeat="v in VM.version track by $index" class="select-item res-material-content" ng-click="VM.selectVersion($index)">{{ v }}</span>
 	</div>
 	<div class="clearfix"></div>
 
-	<div class="res-body-content res-material-version" ng-hide="Select.currentMaterialShow || !Select.currentVersionShow">
+	<div class="res-body-content res-material-version" ng-hide="VM.currentMaterialShow || !VM.currentVersionShow">
 		<div class="res-content-left">教材:</div>
-		<span ng-repeat="v in Select.material track by $index" class="select-item res-material-content" ng-click="Select.selectMaterial($index)">{{ v }}</span>
+		<span ng-repeat="v in VM.material track by $index" class="select-item res-material-content" ng-click="VM.selectMaterial($index)">{{ v }}</span>
 	</div>
-	<div class="res-content-footer" ng-hide="Select.currentMaterialShow">
+	<div class="res-content-footer" ng-hide="VM.currentMaterialShow">
 		<img src="assets/img/res-nav-footer.png">
 		<div></div>
 	</div>
