--- a/src/coms/prepare/views/prepare.html
+++ b/src/coms/prepare/views/prepare.html
@@ -10,7 +10,7 @@
 	
 	<!--带目录显示-->
 	<!--左侧目录-->
-	<div class="col-md-3 catalog" ng-show="!Select.isList">
+	<div class="col-md-3 catalog" ng-show="!VM.isList">
 		<div class="catalog-header"></div>
 		<div class="catalog-content">
 			<div class="catalog-tip"><img src="assets/img/catalog/catalog-tip.png"></div>
@@ -19,8 +19,8 @@
 		
 	</div>
 	<!--右侧资源列表-->
-	<div ng-show="!Select.isList" class="col-md-9" data-ng-include="'/coms/prepare/views/prepare-content.html'"></div>
+	<div ng-show="!VM.isList" class="col-md-9" data-ng-include="'/coms/prepare/views/prepare-content.html'"></div>
 	
 	<!--不带目录显示-->
-	<div ng-show="Select.isList" data-ng-include="'/coms/prepare/views/prepare-content-list.html'"></div>
+	<div ng-show="VM.isList" data-ng-include="'/coms/prepare/views/prepare-content-list.html'"></div>
 </div>
