帮助页面架子

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -85,10 +85,21 @@
     bottom: 15px;
     left: 200px;
 }
-
-
-
-
+// 第三种页面
+.header-bg-custom3{
+    background: #fff;
+}
+.header-bg-custom3 .section-logo{
+    margin-top: 50px;
+    margin-left: 30px;
+}
+.header-bg-custom3 .message{
+    margin-top: 80px;
+}
+.empty-nav{
+    height: 30px;
+    background: @color2;
+}
 
 
 
