--- a/src/coms/layout/header/header.html
+++ b/src/coms/layout/header/header.html
@@ -5,7 +5,7 @@
 		<ul class="message">
 			<li><a href="#"><i class="icon-user"></i> &nbsp;XXX,欢迎您</a></li>
 			<li><a href="#">消息</a></li>
-			<li><a href="#">帮助中心</a></li>
+			<li><a ui-sref="help">帮助中心</a></li>
 			<li><a href="#">退出</a></li>
 		</ul>
 	</div>
