--- a/src/coms/layout/header/header3.html
+++ b/src/coms/layout/header/header3.html
@@ -3,10 +3,10 @@
 	<div class="header-bg-custom3">
 		<div class="container">
 			<img class="section-logo" src="assets/img/logo.png" />
-			<span>帮助中心</span>
+			<!--<span>帮助中心</span>-->
 			<ul class="message">
-				<li><a href="#"><i class="icon-user"></i> &nbsp;XXX,欢迎您</a></li>
-				<li><a href="#">消息</a></li>
+				<li><a ui-sref="settings"><i class="icon-user"></i> &nbsp;XXX,欢迎您</a></li>
+				<li><a ui-sref="message">消息</a></li>
 				<li><a ui-sref="help">帮助中心</a></li>
 				<li><a href="#">退出</a></li>
 			</ul>
