--- a/src/coms/layout/header/header2.html
+++ b/src/coms/layout/header/header2.html
@@ -3,8 +3,8 @@
 	<div class="header-top container">
 		<img class="logo" src="assets/img/logo.png" />
 		<ul class="message">
-			<li><a href="#"><i class="icon-user"></i> &nbsp;XXX,欢迎您</a></li>
-			<li><a href="#">消息</a></li>
+			<li><a ui-sref="settings"><i class="icon-user"></i> &nbsp;XXX,欢迎您</a></li>
+			<li><a ui-sref="message">消息</a></li>
 			<li><a ui-sref="help">帮助中心</a></li>
 			<li><a href="#">退出</a></li>
 		</ul>
