--- a/src/coms/message/views/message.html
+++ b/src/coms/message/views/message.html
@@ -1,3 +1,61 @@
-﻿<div class="container" id="Settings-container">
-	个人设置页面
+﻿<div class="container" id="message-container">
+	<header class="head">
+		<span class="numBox">消息记录<span>（5）</span></span>
+		<div class="deleteBox"><span class="glyphicon glyphicon-trash"></span>清空所有</div>
+	</header>
+	<ul class="mes_list">
+		<li>
+			<div class="mes_title">
+				<span class="mes_kind">【系统消息】</span>
+				<span class="update">2012/03/24 10:20</span>
+			</div>
+			<div class="mes_content">
+				通知：系统消息将于2016年3月25日-3月27日进行系统维护
+			</div>
+		</li>
+		<li>
+			<div class="mes_title">
+				<span class="mes_kind">【个人消息】</span>
+				<span class="update">2012/03/24 10:20</span>
+			</div>
+			<div class="mes_content">
+				通知：系统消息将于2016年3月25日-3月27日进行系统维护
+			</div>
+		</li>
+		<li>
+			<div class="mes_title">
+				<span class="mes_kind">【个人消息】</span>
+				<span class="update">2012/03/24 10:20</span>
+			</div>
+			<div class="mes_content">
+				通知：系统消息将于2016年3月25日-3月27日进行系统维护
+			</div>
+		</li>
+		<li>
+			<div class="mes_title">
+				<span class="mes_kind">【个人消息】</span>
+				<span class="update">2012/03/24 10:20</span>
+			</div>
+			<div class="mes_content">
+				通知：系统消息将于2016年3月25日-3月27日进行系统维护
+			</div>
+		</li>
+		<li>
+			<div class="mes_title">
+				<span class="mes_kind">【个人消息】</span>
+				<span class="update">2012/03/24 10:20</span>
+			</div>
+			<div class="mes_content">
+				通知：系统消息将于2016年3月25日-3月27日进行系统维护
+			</div>
+		</li>
+	</ul>
+	<div class="mes_pagination">
+		<div>
+			<span>共25条，每页显示<input type="text" value="" class="num"/>条</span>
+		</div>
+		<div class="page">
+			
+		</div>
+	</div>
 </div>
