--- a/src/less/font.less
+++ b/src/less/font.less
@@ -23,6 +23,15 @@ body{
 // 资源导航字体
 @resNavFontSize: 1.6rem;
 
+//左侧标签页字体
+@leftTabSize: 1.7rem;
+
+//提示字体
+@hintfont: 1.2rem;
+
+//设置页正文字体
+@settingMainFont: 1.5rem;
+
 /*通用配色 颜色设置*/
 @color1: #12879A;
 @color2: #3FBBCF;
