添加 分布组件和 主控导航

--- a/src/coms/layout/header/header.html
+++ b/src/coms/layout/header/header.html
@@ -1,7 +1,7 @@
 ﻿<!--一级页面header-->
 <div id="header">
 	<div class="header-top container">
-		<img class="logo" src="assets/img/logo.png" />
+		<img ui-sref="systemres" class="logo" src="assets/img/logo.png" />
 		<ul class="message">
 			<li><a ui-sref="settings"><i class="icon-user"></i> &nbsp;XXX,欢迎您</a></li>
 			<li><a ui-sref="message">消息</a></li>
