--- a/src/coms/layout/header/header3.html
+++ b/src/coms/layout/header/header3.html
@@ -2,7 +2,7 @@
 <div id="header">
 	<div class="header-bg-custom3">
 		<div class="container">
-			<img class="section-logo" src="assets/img/logo.png" />
+			<img ui-sref="systemres" class="section-logo" src="assets/img/logo.png" />
 			<!--<span>帮助中心</span>-->
 			<ul class="message">
 				<li><a ui-sref="settings"><i class="icon-user"></i> &nbsp;XXX,欢迎您</a></li>
