--- a/src/less/basic.less
+++ b/src/less/basic.less
@@ -50,3 +50,37 @@ a,a:hover{
 #res-container{
     
 }
+
+// 分页组件
+.pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover, .pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover{
+    background: #219B81;
+    border-color:#219B81;
+}
+.pagination{
+    display: inline;
+}
+.coms-pagination{
+    line-height: 20px;
+    padding-left:30px;
+}
+.coms-pagination .page-go{
+    display: inline-block;
+    margin: 3px 30px;  
+}
+.coms-pagination .page-input{
+    width: 40px;
+    border: 1px solid #848484;
+    padding-left: 6px;
+    background: #d1d1d1;
+    border-radius: 5px;
+}
+.coms-pagination .page-go-btn{
+    background: #219B81;
+    border-radius: 50px;
+    padding: 5px;
+    color: #fff;
+    cursor: pointer;
+}
+.coms-pagination .page-go-btn:hover{
+    background: darkgreen;
+}
