--- a/src/coms/layout/header/header.html
+++ b/src/coms/layout/header/header.html
@@ -23,7 +23,7 @@
 				<li><a ui-sref="schoolres">校本资源</a></li>
 				<li><a ui-sref="areares">区本资源</a></li>
 				<li><a href="#">学生学习空间</a></li>
-				<li><a href="#">资源定制</a></li>
+				<li><a ui-sref="customres">资源定制</a></li>
 				<li><a href="#"><img src="assets/img/profile.png"/>个人中心</a></li>
 				<li class="shopping-cart"><a ui-sref="prepare" target="_new"><img src="assets/img/shopcart.png"/>备课夹</a></li>
 			</ul>
