--- a/src/coms/help/views/help.html
+++ b/src/coms/help/views/help.html
@@ -1,4 +1,5 @@
-﻿<div class="container" id="help-container">
+﻿<div class="empty-nav"></div>
+<div class="container" id="help-container">
 
 	<ul class="help_nav">
 		<li ng-class="VM.help" ng-click="switchNav('help')" >
