--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -1,8 +1,12 @@
 /*备课夹*/
+#prepare-container{
+    margin-top: -70px;
+}
 .new-prepare{
    position: absolute;
    right: 50px;
-   bottom: 15px;
+   top: 60px;
+   width: 120px;
 }
 
 /*备课夹 content*/
