--- a/src/coms/message/views/message.html
+++ b/src/coms/message/views/message.html
@@ -1,4 +1,5 @@
-﻿<div class="container" id="message-container">
+﻿<div class="empty-nav"></div>
+<div class="container" id="message-container">
 	<header class="head">
 		<span class="numBox">消息记录<span>（5）</span></span>
 		<div class="deleteBox"><span class="glyphicon glyphicon-trash"></span>清空所有</div>
