资源定制页

--- a/src/coms/res-custom/views/customres-content.html
+++ b/src/coms/res-custom/views/customres-content.html
@@ -1,86 +1,4 @@
-<div class="res-content-header"></div>
-<div id="res-content-right">
-	<div class="res-header-catogry">
-		<span class="catogry-item">全部</span>
-		<span class="catogry-item">动画教具库</span>
-		<span class="catogry-item">名师微课库</span>
-		<span class="catogry-item">教学案例库</span>
-		<span class="catogry-item">教学素材库</span>
-		<span class="catogry-item">多媒体教辅库</span>
-		<span class="catogry-item">理化生实验室</span>
-		<span class="catogry-item">情景英语</span>
-		<span class="catogry-item">题库</span>
-	</div>
-	<div class="res-header-type">
-		<span class="type-title">资源类型:</span>
-		<span class="type-list type-active">全部</span>
-		<span class="type-list">动画</span>
-		<span class="type-list">视频</span>
-		<span class="type-list">音频</span>
-		<span class="type-list">图片</span>
-		<span class="type-list">网页</span>
-		<span class="type-list">课件</span>
-		<span class="type-list">教案</span>
-		<span class="type-list">文本</span>
-		<span class="type-list">试题</span>
-	</div>
-	<div class="statistic-tab">
-		<span class="statistic-item"><i class="icon-bar-chart"></i>推荐指数</span>
-		<span class="statistic-item"><i class="icon-bar-chart"></i>评分星级</span>
-		<span class="statistic-item"><i class="icon-bar-chart"></i>下载次数</span>
-		<span class="statistic-item"><i class="icon-bar-chart"></i>收藏次数</span>
-		<span class="statistic-item"><i class="icon-bar-chart"></i>浏览次数</span>
-		<span class="statistic-item"></span>
-		<span class="statistic-item" ng-click="switchList(true)"><i class="icon-th-list"></i></span>
-		<span class="statistic-item" ng-click="switchList(false)"><i class="icon-th-large"></i></span>
-	</div>
-
-	<div class="res-list-main">
-		<ul class="res-ul-list" ng-show="isList">
-			<li class="res-list-item" ng-repeat="list in [0,1,2,3,4,5,6,7,8]" ui-sref="previewres">
-				<input class="res-checkbox" type="checkbox">
-				<img class="res-list-thumb" src="assets/img/title.jpg">
-				<span class="res-list-info">
-					<label class="res-title">《触摸春天》生字学习</label><br>
-					<label class="res-type">类型: 动画</label>
-					<label class="res-size">大小：10M</label><br>
-					<label class="res-star"><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i></label>
-					
-					<label class="res-number">281浏览/5下载</label>
-				</span>
-				<span class="res-list-tools">
-					<add-to-cart-button class="res-select">加入备课夹</add-to-cart-button><br>
-					<label class="res-download"><i class="icon-download-alt"></i>点击下载</label>
-				</span>
-			</li>
-		</ul>
-		<ul class="res-ul-thubmlist" ng-show="!isList">
-			<li class="res-thubmlist-item col-md-4" ng-repeat="list in [0,1,2,3,4,5,6,7,8]">
-				<input class="res-checkbox" type="checkbox">
-				<img class="res-thubmlist-thumb" src="assets/img/title.jpg">
-				<span class="res-thubmlist-info">
-					<label class="res-title">《触摸春天》生字学习</label><br>
-					<label class="res-type">类型: 动画</label>
-					<label class="res-size">大小：10M</label><br>
-					<label class="res-star"><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i></label>
-					
-					<label class="res-number">281浏览/5下载</label>
-				</span>
-				<span class="res-thubmlist-tools">
-					<label class="res-download"><i class="icon-download-alt"></i>点击下载</label>
-					<add-to-cart-button class="res-select">加入备课夹</add-to-cart-button>
-				</span>
-			</li>
-		</ul>
-		<div style="clear:both"></div>
-		<div class="coms-pagination">
-		 	<uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize"  boundary-link-numbers="true" previous-text="上一页" next-text="下一页"></uib-pagination>
-			<div class="page-go">
-				<span class="page-text">转到</span>
-				<input class="page-input"/>
-				<span class="page-go-btn">Go</span>
-			</div>
-			
-		</div> 
-	</div>
+<div id="customres-container">
+	资源定制
+	<br>
 </div>
