--- a/src/less/basic.less
+++ b/src/less/basic.less
@@ -62,6 +62,7 @@ a,a:hover{
 .coms-pagination{
     line-height: 20px;
     padding-left:30px;
+    display: inline-block;
 }
 .coms-pagination .page-go{
     display: inline-block;
