--- a/src/coms/prepare/views/prepare-content-list.html
+++ b/src/coms/prepare/views/prepare-content-list.html
@@ -10,6 +10,14 @@
 		<div class="prepare-all-header">
 			<img class="prepare-all-header-img" src="assets/img/prepare/prepare-list.png" />
 			<span>{{list.date}}</span>
+			<div class="coms-pagination">
+			 	<uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize"  boundary-link-numbers="true" previous-text="&lsaquo;" next-text="&rsaquo;"></uib-pagination>
+				<div class="page-go">
+					<span class="page-text">转到</span>
+					<input class="page-input"/>
+					<span class="page-go-btn">Go</span>
+				</div>
+			</div> 
 		</div>
 		<div class="prepare-gallery row">
 			<!--<span class="leftbtn icon-angle"><i class="icon-angle-left"></i></span>-->
