--- a/src/coms/prepare/views/prepare-content.html
+++ b/src/coms/prepare/views/prepare-content.html
@@ -35,4 +35,12 @@
 			</div>
 		</div>
 	</div>
+	<div class="coms-pagination">
+		 	<uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize"  boundary-link-numbers="true" previous-text="上一页" next-text="下一页"></uib-pagination>
+			<div class="page-go">
+				<span class="page-text">转到</span>
+				<input class="page-input"/>
+				<span class="page-go-btn">Go</span>
+			</div>
+		</div> 
 </div>
