--- a/src/less/header.less
+++ b/src/less/header.less
@@ -104,28 +104,11 @@
 .empty-nav-custom{
     height: 55px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.empty-nav-header2{
+    height: 40px;
+    background: #12879A;
+}
+.custom-header2{
+    background: #fff;
+    padding: 10px;
+}
